--- a/AngularOne/AngularOne/package.json
+++ b/AngularOne/AngularOne/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
     "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "popper": "^1.0.1",
     "rxjs": "~6.5.5",
